# tourismo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  main.py  manage.py  pyproject.toml  run.sh
.github/workflows/: deploy.yml
agency/: admin.py  constants.py  context_processors.py  models.py  permissions.py  tests.py  urls.py  views.py
agency/migrations/: 0001_initial.py  0002_package_bookings_rows_notification.py
agency/views/: __init__.py  auth.py  dashboard.py  shared.py  users.py
features/: notifications_broadcast.feature  saved_profile_login.feature
features/steps/: bdd_steps.py
k8s/: configmap.yaml  kustomization.yaml  media-pvc.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml
k8s/cert-manager/: clusterissuer.yaml
k8s/django/: deployment.yaml  hpa.yaml  service.yaml
k8s/nginx/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/postgres/: deployment.yaml  pvc.yaml  service.yaml
k8s/traefik/: ingressroute.yaml
nginx/: nginx.conf
static/css/: app.css
static/js/: app.js
templates/agency/: admin_control_dashboard.html  base.html  booking_form.html  bookings.html  client_detail.html  client_form.html  clients.html  dashboard.html  destination_form.html  destinations.html  guide_form.html  guides.html  notifications.html  package_form.html  packages.html  user_form.html  user_profile.html  users.html
templates/registration/: logged_out.html  login.html  register.html
tourismo/: asgi.py  settings.py  urls.py  wsgi.py
