[project]
name = "tourismo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "behave>=1.3.3",
    "behave-django>=2.0.0",
    "django>=6.0.5",
    "flask>=3.1.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.14",
    "streamlit>=1.58.0",
]

[tool.pytest]
DJANGO_SETTINGS_MODULE = "tourismo.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = ["tests", "integration"]

[tool.coverage.run]
source = ["agency"]
omit = ["agency/tests.py", "agency/migrations/*"]

[tool.coverage.report]
show_missing = true
